tests/unit-fail-compilation/j023f.c.ref
j023f.c:3:2: error: Void value as right operand in assignment.
  Undefined behavior (UB-TEAS4).
   see C11 section 6.3.2.2:1 http://rvdoc.org/C11/6.3.2.2
   see C11 section J.2:1 item 23 http://rvdoc.org/C11/J.2
   see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j023f.c to see commands run.
