tests/unit-fail-compilation/j023f.c
int main(void){
	int x;
	x = (void)5;
}
